Edited in order to accomodate new nitrogen updates
Signed-off-by: Tristan Sloughter <kungfooguru@gmail.com>

--- a/content/web_content/post_template.html
+++ b/content/web_content/post_template.html
@@ -11,16 +11,17 @@
 <link href='/nitrogen/nitrogen.css' type='text/css' rel='stylesheet'>
 
 <body>
-<form method="get" action="http://24.148.8.137:8000/web/search">
+
+<div class=header>
+[[[page:header()]]]
+</div>
+	
+<div class=content>	
+[[[element_flash:render()]]]
+[[[page:body()]]]
+</div>
 
 
-<br>
-[[[section1]]]
-<br>
-
-<!--#include FILE="footer.html" --> 
-
-</form>
 <script>
 [[[script]]]
 </script>
