--- a/wwwroot/user_template.html
+++ b/wwwroot/user_template.html
@@ -4,11 +4,16 @@
 <title>[[[title]]]</title>	
 <meta http-equiv='Content-Style-Type' content='text/css'>
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
-<script src='/nitrogen/prototype.js' type='text/javascript' charset='utf-8'></script>
-<script src='/nitrogen/scriptaculous.js' type='text/javascript' charset='utf-8'></script>
+<script src='/nitrogen/jquery-1.2.6.js' type='text/javascript' charset='utf-8'></script>
+<script src='/nitrogen/jquery-ui-personalized-1.5.3.min.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/livevalidation.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/nitrogen.js' type='text/javascript' charset='utf-8'></script>
-<link href='/nitrogen/nitrogen.css' type='text/css' rel='stylesheet'>
+<link rel="stylesheet" href="/css/reset.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="/css/page.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="/nitrogen/elements.css" type="text/css" media="screen" charset="utf-8">
+
+<!-- <link href='/nitrogen/nitrogen.css' type='text/css' rel='stylesheet'> -->
 
 <body>
 
